--- a/style_contact.css
+++ b/style_contact.css
@@ -1,1 +1,27 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  text-align: center;
+}
+
+.ctn {
+  border: solid 2px black;
+  display: flex;
+  flex-direction: column;
+  max-width: 80%;
+  margin: 40px auto;
+  padding: 20px 0;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  padding: 20px;
+}
