--- a/style_home.css
+++ b/style_home.css
@@ -11,7 +11,7 @@ video{
     opacity: 0.8;
 }
 .ctn{
-    border: 8px solid white;
+    border: 8px solid #222831;
     height: 92vh;
     width: 97vw;
     text-align: center;
@@ -19,3 +19,39 @@ video{
     flex-direction: column;
     justify-content: space-around;
 }
+a{
+    width: 200px;
+    height: 150px;
+    background: black;
+    color: white;
+    text-decoration: none;
+    margin-left: 10px;
+    padding: 10px;
+    border-radius: 15px;
+
+}
+
+h1:hover{
+    color: #FFEC9E;
+}
+
+a:hover{
+    background-color: grey;
+}
+
+h1{
+    color: #EEEEEE;
+    font-size: 65px;
+    background-color: #222831;
+    animation-name: changeColor;
+    animation-duration: 10s;
+}
+@keyframes changeColor{
+    from{background-color: #00ADB5;}
+    to{background-color: rgb(238, 238, 238);}
+}
+.title2{
+color: rgb(0, 173, 181);}
+
+.title1{
+color:rgb(169, 62, 130)}
