--- a/style_contact.css
+++ b/style_contact.css
@@ -5,15 +5,19 @@
 
 body {
   text-align: center;
+  color: #eeeeee;
+  background-color: #222831;
 }
 
 .ctn {
   border: solid 2px black;
   display: flex;
   flex-direction: column;
-  max-width: 80%;
   margin: 40px auto;
   padding: 20px 0;
+  max-width: 70%;
+  background-color: #393e46;
+  border-radius: 10px;
 }
 
 form {
@@ -21,7 +25,43 @@ form {
   flex-direction: column;
   align-items: center;
 }
+input,
+textarea {
+  width: 60%;
+}
 
 h1 {
   padding: 20px;
+}
+
+a {
+  color: #eeeeee;
+}
+
+nav {
+  background-color: #393e46;
+  padding: 20px;
+}
+
+.foot {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer {
+  margin-top: 30px;
+  padding: 10px;
+  position: absolute;
+  background-color: #00adb5;
+  bottom: 0;
+  width: 100%;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.active {
+  background-color: #00adb5;
 }
