--- a/style_contact.css
+++ b/style_contact.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 40px auto;
-  padding: 20px 0;
+  padding: 10px 0;
   max-width: 70%;
   background-color: #393e46;
   border-radius: 10px;
@@ -28,19 +28,20 @@ form {
 input,
 textarea {
   width: 60%;
+  margin-bottom: 10px;
 }
 
 h1 {
   padding: 20px;
 }
 
-a {
+/* Copy every thing below this comment */
+li a {
   color: #eeeeee;
-}
-
-nav {
-  background-color: #393e46;
-  padding: 20px;
+  text-decoration: none;
+  display: block;
+  padding: 14px 16px;
+  font-size: larger;
 }
 
 .foot {
@@ -57,11 +58,18 @@ footer {
   width: 100%;
 }
 ul {
+  background-color: #393e46;
+  padding: 0;
   list-style-type: none;
   display: flex;
   justify-content: space-evenly;
+  overflow: hidden;
 }
 
 .active {
   background-color: #00adb5;
+}
+
+li a:hover:not(.active) {
+  background-color: #222831;
 }
