--- a/style_about.css
+++ b/style_about.css
@@ -1,7 +1,11 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 h1{
     font-size: 35px;
-    font-family:Times New Roman
-
+    font-family:Times New Roman;
+    padding: 20px 0px;
 }
 p{
     font-size: 28px;
@@ -11,6 +15,7 @@ p{
 h2{
    font-size: 35px;
    background-color: #00ADB5;
+   margin-bottom: 25px;
 }
 
 body{
@@ -27,4 +32,51 @@ div{
 img{
     border-radius: 40%;
     border-top: 50px;
+    margin-bottom: 75px;
 }  
+li a {
+    color: #eeeeee;
+    text-decoration: none;
+    display: block;
+    padding: 14px 16px;
+    font-size: larger;
+  }
+  .foot {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  footer {
+    margin-top: 30px;
+    padding: 10px;
+    background-color: #00adb5;
+    width: 100%;
+  }
+  ul {
+    background-color: #393e46;
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-evenly;
+    overflow: hidden;
+  }
+  .active {
+    background-color: #00adb5;
+  }
+  li a:hover:not(.active) {
+    background-color: #222831;
+  }
+  .footer-p{
+    margin: 0;
+    padding: 0;
+  }   
+  img{
+    border-radius: 20%;
+    border-top: 30px;
+  }
+
+  .Art{
+    height: 200px;
+    width: 230px;
+  
+  }
+  
