--- a/style_menu.css
+++ b/style_menu.css
@@ -1,63 +1,104 @@
-body{
-    height: 100%;
-    width: 100%;
-    background-color:rgb(57, 62, 70);
-
+* {
+  padding: 0;
+  margin: 0;
 }
-h2{
-    display: flex;
-    justify-content: center;
-    color:aqua;
-    
+body {
+  height: 100%;
+  width: 100%;
+  background-color: #222831;
 }
-
-section{
-    text-align: center;
+h2 {
+  display: flex;
+  justify-content: center;
+  color: aqua;
 }
 
-.menu-image{
-    height: 200px;
-    width: 200px;
+section {
+  text-align: center;
 }
 
-.btn{
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 15px;
-    text-decoration: none;
-    color: aqua;
-    background-color: black;
-    border-radius: 5px;
-    /* height: ; */
+.menu-image {
+  height: 200px;
+  width: 200px;
 }
 
-.btn:hover{
-    background-color: grey;
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
+  margin-top: 15px;
+  text-decoration: none;
+  color: aqua;
+  background-color: black;
+  border-radius: 5px;
+  /* height: ; */
 }
 
-.menu-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.btn:hover {
+  background-color: grey;
 }
 
-.project-card{
-    border: 5px solid black;
-     /* max-width: 30%;  */
-    box-shadow: rgba(0, 0, 0, 0.3)
-     0px 19px 38px, rgba(0, 0, 0, 0.22)
-     0px 15px 12px;
-    /* width: 170px; */
-    text-align: center;
-     height: 550px; 
-    margin: 20px;
-    width: 270px;
-    background-color: aliceblue;
-}
-.project-card1 .project-card2 .project-card3{
-    max-width: 25%;
+.menu-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
-p{
-    height: 200px;
+.project-card {
+  border: 5px solid black;
+  /* max-width: 30%;  */
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  /* width: 170px; */
+  text-align: center;
+  height: 550px;
+  margin: 20px;
+  width: 270px;
+  background-color: aliceblue;
+}
+.project-card1 .project-card2 .project-card3 {
+  max-width: 25%;
+}
+
+p {
+  height: 200px;
+}
+
+li a {
+  color: #eeeeee;
+  text-decoration: none;
+  display: block;
+  padding: 14px 16px;
+  font-size: larger;
+}
+
+.foot {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer {
+  margin-top: 30px;
+  padding: 10px;
+  background-color: #00adb5;
+  width: 100%;
+}
+ul {
+  background-color: #393e46;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  overflow: hidden;
+}
+
+.active {
+  background-color: #00adb5;
+}
+
+li a:hover:not(.active) {
+  background-color: #222831;
+}
+
+.footer-p {
+  height: 1em;
 }
