--- a/style_about.css
+++ b/style_about.css
@@ -77,6 +77,18 @@ li a {
   .Art{
     height: 200px;
     width: 230px;
-  
   }
-  
+  nav{
+  animation-name: navAnim ;
+  animation-fill-mode: forwards;
+  animation-duration: 3s;
+}
+
+@keyframes navAnim{
+  from{
+    width: 0%;
+  }
+  to{
+    width: 100%
+  }
+}
