--- a/style_menu.css
+++ b/style_menu.css
@@ -102,3 +102,17 @@ li a:hover:not(.active) {
 .footer-p {
   height: 1em;
 }
+nav{
+  animation-name: navAnim ;
+  animation-fill-mode: forwards;
+  animation-duration: 3s;
+}
+
+@keyframes navAnim{
+  from{
+    width: 0%;
+  }
+  to{
+    width: 100%
+  }
+}
